--- a/manifest.json
+++ b/manifest.json
@@ -10,17 +10,17 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
+      "16": "/images/image16.png",
+      "32": "/images/image32.png",
+      "48": "/images/image32.png",
+      "128": "/images/image32.png"
     }
   },
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
+    "16": "/images/image16.png",
+    "32": "/images/image32.png",
+    "48": "/images/image32.png",
+    "128": "/images/image32.png"
   },
   "options_ui": {
     "page": "options.html",
