--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "background": {
     "service-worker": "background.js"
   },
-  "permissions": ["storage", "activeTab", "scripting", "tts"],
+  "permissions": ["storage", "activeTab", "scripting"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
